--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -39,7 +39,7 @@
     width: 100%;
     height: 100%;
     background: #000;
-    color: wheat;
+    color: white;
     border-radius: 15px;
     text-decoration: none;
     overflow: hidden;
@@ -58,17 +58,19 @@
     text-align: center;
     margin-bottom: 10px;
 
+
 }
 
 .sidenav_nav .sidenav_link_text {
     opacity: 1;
     font-size: 13px;
     font-weight: 500;
+
 }
 
 .sidenav_nav .sidenav_nav_item .sidenav_nav_link:hover {
     background: #ff6a0029;
-    color: #ff6b00;
+    color: #fff;
     width: 100%;
     box-shadow: inset 0px 0px 6px 2px #ff6b00;
 
@@ -83,14 +85,14 @@
 
 
 .active .sidenav_link_text {
-    color: #ff6b00;
+    color: #fff;
     font-size: 14px;
     font-weight: 700;
 
 }
 
 .active .sidenav_link_icon {
-    color: #ff6b00;
+    color: #fff;
     margin-bottom: 5px;
     font-size: 35px;
     font-weight: 800;
