--- a/src/styles.css
+++ b/src/styles.css
@@ -9,5 +9,40 @@
 body {
     position: relative;
     font-family: "Poppins", sans-serif;
-    background: #000;
+    background: var(--backgraund--body);
+}
+
+
+:root {
+
+    --backgraund--body: hsl(0, 100%, 0%);
+    --backgraund--componets: hsl(204, 100%, 3%);
+    --border-shadow-interior: hsl(185, 100%, 18%);
+    --backgraund--interior--img: hsl(0, 100%, 0%);
+    --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
+    --title-color: hsl(var(--hue-color), 8%, 15%);
+    --text-color: hsl(var(--hue-color), 8%, 45%);
+    --text-color-light: hsl(var(--hue-color), 8%, 65%);
+    --input-color: hsl(var(--hue-color), 70%, 96%);
+    --body-color: hsl(var(--hue-color), 60%, 99%);
+    --container-color: #fff;
+    --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
+    --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
+
+
+}
+
+
+
+
+/* //////////// Dark Tema ///////////////////// */
+body.dark-theme {
+    --backgraund--body: hsl(0, 0%, 99%);
+    --title-color: hsl(var(--hue-color), 8%, 95%);
+    --text-color: hsl(var(--hue-color), 8%, 75%);
+    --input-color: hsl(var(--hue-color), 29%, 16%);
+    --body-color: hsl(var(--hue-color), 28%, 12%);
+    --container-color: hsl(--hue-color), 29%, 16%;
+    --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+    --scroll-thumb-color: hsl(var(--hue-color), 12%, 32%);
 }
