--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -22,25 +22,24 @@
                 <div class="box b1">
                     <div class="icon "><i class=" fa-solid fa-swatchbook"></i></div>
                     <div class="text">
-                        <h4>Ui/Ux Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
-                            vitae, ipsam reiciendis architecto sint</p>  
+                        <h4>Ui/Ux Diseño</h4>
+                        <p>Construyo interfaces intuitivas y experiencias memorables, fusionando estética y
+                            funcionalidad.
+                        </p>
                     </div>
                 </div>
-                <div class="box b2">
+                <!-- <div class="box b2">
                     <div class="icon"><i class="fa-solid fa-laptop-code"></i></div>
                     <div class="text">
                         <h4>App Development</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
-                            vitae, ipsam reiciendis architecto sint</p>
+                        <p>Desarrollo aplicaciones móviles innovadoras y eficientes con tecnologías de vanguardia.</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="box b2">
                     <div class="icon"><i class="fa-solid fa-code"></i></div>
                     <div class="text">
-                        <h4>Web Development</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
-                            vitae, ipsam reiciendis architecto sint</p>
+                        <h4>Desarrollo Web</h4>
+                        <p>Creo sitios web dinámicos y atractivos con un diseño impactante y rendimiento óptimo.</p>
                     </div>
                 </div>
 
@@ -49,10 +48,14 @@
 
         <div class="wrapper">
             <h1 class="subtitle">Lo que me gusta</h1>
-            <p>Soy un apasionado explorador de la tecnología, impulsado por una curiosidad insaciable por aprender y
-                crecer.
-                Mi camino en la Ingeniería de Sistemas ha sido una aventura desafiante pero gratificante, donde he
-                cultivad
+            <p>Soy un apasionado programador con un espíritu aventurero que encuentra su refugio en las alturas de las
+                montañas, ya sea escalando el majestuoso Monserrate o explorando otras rutas permitidas en Bogotá.
+                Además de mi amor por la naturaleza, siento una fascinación inexplicable por el vasto universo y la
+                intriga del espacio, soñando con la posibilidad de colaborar en una base espacial algún día. La música
+                es mi constante compañera en todas mis actividades, inspirándome mientras programo, escalo una montaña o
+                me sumerjo en las maravillas del cosmos. Mi pasión por la tecnología y la innovación me impulsa a
+                mantenerme al día con las últimas herramientas y soluciones en el mundo de la programación, siempre
+                buscando ofrecer soluciones eficientes y creativas a los desafíos que enfrento.
             </p>
             <div class="container1">
                 <input type="radio" name="slide" id="c1" checked>
