--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -8,8 +8,8 @@
     position: relative;
     top: 0;
     transition: all .5s ease;
-    background: #0e75a912;
+    background: var(--backgraund--componets);
     border-radius: 15px;
-    box-shadow: inset  0px 0px 6px 2px #00e5ff52;
+    box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
 
 }
