--- a/src/app/pointsatar/pointsatar.component.html
+++ b/src/app/pointsatar/pointsatar.component.html
@@ -1,24 +1,22 @@
 <div class="pointerstar">
     <div class="status">
-        <div class="nav_btns">
-            <div class="moon ">
-                <i class="bx uil-moon change-theme" id="theme-button"></i>
-
-            </div>
-            
-            <div class="music" id="nav_music">
-                <i class='bx bx-volume-full change-theme'></i>
-            </div>
+      <div class="nav_btns">
+        <div class="moon" (click)="toggleTheme()">
+          <i class="bx uil-moon change-theme" id="theme-button"></i>
         </div>
-        <div class="nav_btns_stars">
-            <div class="star " id="nav_star">
-                <i class='bx bx-star  change-theme'></i>
-            </div>
-            <div class="puntos">
-                <p>Star<span>0</span></p>
-
-            </div>
-
+  
+        <div class="music" id="nav_music">
+          <i class='bx bx-volume-full change-theme'></i>
         </div>
+      </div>
+      <div class="nav_btns_stars">
+        <div class="star" id="nav_star">
+          <i class='bx bx-star  change-theme'></i>
+        </div>
+        <div class="puntos">
+          <p>Star<span>0</span></p>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+  
