listo se actualizo los temas oscuros y claros falta ahora cambiar los colores correctamente

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,5 @@
 .header {
-    background: var(--backgraund--componets);
+    background: var(--backgraund-componets);
     margin: 10px;
     transition: all .5s ease;
     position: relative;
