--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -8,7 +8,7 @@
     position: relative;
     top: 0;
     transition: all .5s ease;
-    background: var(--backgraund--componets);
+    background: var(--backgraund-componets);
     border-radius: 15px;
     box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
 
