--- a/src/app/perfil/perfil.component.css
+++ b/src/app/perfil/perfil.component.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-    background: var(--backgraund--componets);
+    background: var(--backgraund-componets);
     margin: 10px;
     position: fixed;
     z-index: 1;
@@ -51,7 +51,7 @@ h1 {
     margin-top: 10px;
     margin-bottom: 5px;
     font-size: 20px;
-    color: white;
+    color: var(--color-blanco-texto);
 }
 
 
@@ -97,7 +97,7 @@ h1 {
 .cardperson i:hover {
     transform: scale(1.1);
     background: #00000029;
-    color: #ffff;
+    color: var(--color-blanco-texto);
     box-shadow: inset 0px 0px 14px 0px #00e5ff94;
 
 }
