--- a/src/styles.css
+++ b/src/styles.css
@@ -9,17 +9,17 @@
 body {
     position: relative;
     font-family: "Poppins", sans-serif;
-    background: var(--backgraund--body);
+    background: var(--backgraund-body);
 }
 
 
 :root {
 
-    --backgraund--body: hsl(0, 100%, 0%);
-    --backgraund--componets: hsl(204, 100%, 3%);
+    --backgraund-body: hsl(0, 100%, 0%);
+    --backgraund-componets: hsl(204, 100%, 3%);
     --border-shadow-interior: hsl(185, 100%, 18%);
-    --backgraund--interior--img: hsl(0, 100%, 0%);
-    --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
+    --backgraund-interior-img: hsl(0, 100%, 0%);
+    --color-blanco-texto: hsl(76, 100%, 100%);
     --title-color: hsl(var(--hue-color), 8%, 15%);
     --text-color: hsl(var(--hue-color), 8%, 45%);
     --text-color-light: hsl(var(--hue-color), 8%, 65%);
@@ -37,7 +37,7 @@ body {
 
 /* //////////// Dark Tema ///////////////////// */
 body.dark-theme {
-    --backgraund--body: hsl(0, 0%, 99%);
+    --backgraund-body: hsl(0, 0%, 99%);
     --title-color: hsl(var(--hue-color), 8%, 95%);
     --text-color: hsl(var(--hue-color), 8%, 75%);
     --input-color: hsl(var(--hue-color), 29%, 16%);
