--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -25,16 +25,16 @@ h2 {
 .border {
     color: #000;
     text-shadow:
-        -1px -1px 0 #00e5ff,
-        1px -1px 0 #00e5ff,
-        1px 1px 0 #00e5ff,
-        -1px 1px 0 #00e5ff;
-    text-shadow: 0px 0px 6px #00e5ff;
+        -1px -1px 0 var( --color-azul-neon),
+        1px -1px 0 var( --color-azul-neon),
+        1px 1px 0 var( --color-azul-neon),
+        -1px 1px 0 var( --color-azul-neon);
+    text-shadow: 0px 0px 6px var(--color-borde-azul);
     top: 0;
 }
 
 .wave {
-    color: #00e5ff;
+    color: var( --color-azul-neon);
     animation: wave 3s ease-in-out infinite;
     top: 0;
 
@@ -89,7 +89,7 @@ h2 {
 
 /* for all social containers*/
 .socialContainer {
-    background: var();
+    background: var(--backgraund-interior-img);
     border-radius: 5px;
     margin-top: 5px;
     width: 30px;
@@ -100,7 +100,7 @@ h2 {
     overflow: hidden;
     text-decoration: none;
     transition-duration: .3s;
-    box-shadow:  0px 0px 5px 0px ;
+    box-shadow:  0px 0px 5px 0px var(--color-borde-azul);
 
 }
 
@@ -113,6 +113,7 @@ h2 {
 /* linkdin*/
 .containerOne:hover {
     background-color: #000cfa3e;
+    color: #0026ff;
     transform: scale(1.3);
     box-shadow:none;
 
@@ -142,6 +143,7 @@ h2 {
 .containerThree:hover {
     background-color: #a81bb56a;
     transform: scale(1.3);
+    color: #a407ff;
     box-shadow:none;
 
 }
