--- a/src/styles.css
+++ b/src/styles.css
@@ -40,8 +40,8 @@ body {
 
 
     /* ///////////////////////about/////////////// */
-    --color-texto-blanco:hsl(0, 0%, 100%);
-
+    --color-texto-title:hsl(0, 0%, 100%);
+    --color-texto-blanco:hsl(0, 0%, 67%);
     --color-b1:hsla(303, 100%, 50%, 0.114);
     --color-b2:hsla(210, 100%, 73%, 0.161);
 
@@ -75,8 +75,9 @@ body.dark-theme {
      --color-borde-azul:hsl(0, 0%, 0%);
 
     /* ///////////////////////about/////////////// */
---color-texto-blanco:hsl(0, 0%, 100%);
-    --color-b1:hsl(303, 100%, 20.87%);
-    --color-b2:hsla(210, 100%, 73%, 0.404);
+    --color-texto-title:hsl(0, 0%, 100%);
+--color-texto-blanco:hsl(0, 0%, 67%);
+    --color-b1:hsl(0, 0%, 0%);
+    --color-b2:hsl(0, 0%, 0%);
 
 }
