--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -48,7 +48,7 @@
 
         <div class="wrapper">
             <h1 class="subtitle">Lo que me gusta</h1>
-            <p>Soy un apasionado programador con un espíritu aventurero que encuentra su refugio en las alturas de las
+            <p>Soy un apasionado programador con un espíritu aventurero que le gusta las alturas de las
                 montañas, ya sea escalando el majestuoso Monserrate o explorando otras rutas permitidas en Bogotá.
                 Además de mi amor por la naturaleza, siento una fascinación inexplicable por el vasto universo y la
                 intriga del espacio, soñando con la posibilidad de colaborar en una base espacial algún día. La música
