--- a/src/app/pointsatar/pointsatar.component.html
+++ b/src/app/pointsatar/pointsatar.component.html
@@ -11,10 +11,10 @@
       </div>
       <div class="nav_btns_stars">
         <div class="star" id="nav_star">
-          <i class='bx bx-star  change-theme'></i>
+          <i class='bx bxs-star  change-theme'></i>
         </div>
         <div class="puntos">
-          <p>Star<span>0</span></p>
+          <p>Stars<span>1</span></p>
         </div>
       </div>
     </div>
