--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
-    <h2 class="border">FullStak</h2>
-<h2 class="wave">FullStak</h2>
+    <h2 class="border">Junior FullStak</h2>
+<h2 class="wave">Junior FullStak</h2>
   <div class="social">
             <div class="card">
                 <a href="#" class="socialContainer containerOne">
