--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -35,18 +35,18 @@
 
 .sidenav_nav .sidenav_nav_link {
     display: flex;
-    height: 3rem;
     width: 100%;
     height: 100%;
-    background: #000;
-    color: white;
+    color:#fff;
     border-radius: 15px;
+    border: 1px solid var(--backgraund-interior-img);
     text-decoration: none;
     overflow: hidden;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: inset 0px 0px 6px 2px #00e5ff52;
+    box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
+
 
 }
 
@@ -93,8 +93,8 @@
 
 .active .sidenav_link_icon {
     color: #fff;
-    margin-bottom: 5px;
     font-size: 35px;
-    font-weight: 800;
+    font-weight: 100;
+    margin: 0;
 
 }
