--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -8,9 +8,9 @@
     <section class="section">
 
         <div class="container">
-            
+
             <div class="conte">
-                <h1 class="heading"><i class='bx bxs-graduation'></i>Educacion</h1>
+                <h1 class="heading"><i class='bx bxs-graduation c1'></i>Educacion</h1>
                 <div class="box_container">
                     <div class="box b1">
                         <div class="text">
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="conte">
-                <h1 class="heading"><i class='bx bxs-briefcase-alt-2'></i>Experiencia</h1>
+                <h1 class="heading"><i class='bx bxs-briefcase-alt-2 c2'></i>Experiencia</h1>
                 <div class="box_container">
                     <div class="box b2">
                         <div class="text">
@@ -89,16 +89,19 @@
                 </div>
             </div>
         </div>
-        <div class="habilidades">
-            <div class="title1">
-                <div class="text-animate2">
-                    <h2>Habilidades</h2>
-                </div>
-                <div class="line"></div>
-            </div>
-        </div>
+
 
     </section>
+    <div class="habilidades">
+        <div class="title">
+            <div class="text-animate2">
+                <h2>Habilidades</h2>
+            </div>
+            <div class="line"></div>
+        </div>
+
+
+    </div>
     <div class="footer">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
     </div>
