modificaciones disño de resumecambios de diseño

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -6,9 +6,7 @@
         <div class="line"></div>
     </div>
     <section class="section">
-
         <div class="container">
-
             <div class="conte">
                 <h1 class="heading"><i class='bx bxs-graduation c1'></i>Educacion</h1>
                 <div class="box_container">
@@ -18,9 +16,8 @@
                                 <i class="uil uil-calendar-alt"></i>
                                 <p>2019 Finalizado </p>
                             </div>
-
-                            <h4>Bachillerato </h4>
-                            <p>Jorge Eliecer Gaitan </p>
+                            <h4>Bachillerato</h4>
+                            <p>Jorge Eliecer Gaitan</p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
@@ -30,11 +27,10 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p>2023 Finalizado </p>
+                                <p>2023 Finalizado</p>
                             </div>
-
-                            <h4>Analisis y Desarrollo De Sistemas De Informacion </h4>
-                            <p>Sena - Tecnologo </p>
+                            <h4>Analisis y Desarrollo De Sistemas De Informacion</h4>
+                            <p>Sena - Tecnologo</p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
@@ -44,17 +40,15 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p> 2019 / Actualmente 7º</p>
+                                <p>2019 / Actualmente 7º</p>
                             </div>
-
                             <h4>Ingenieria de Sistemas</h4>
-                            <p>UNAD </p>
+                            <p>UNAD</p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
                         </div>
                     </div>
-
                 </div>
             </div>
             <div class="conte">
@@ -64,10 +58,10 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p> 2022 / 2023 Finalizado </p>
+                                <p>2022 / 2023 Finalizado</p>
                             </div>
-                            <h4>Auxiliar Frontend </h4>
-                            <p>Lineru - Tangelo </p>
+                            <h4>Auxiliar Frontend</h4>
+                            <p>Lineru - Tangelo</p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
@@ -77,10 +71,10 @@
                         <div class="text">
                             <div class="experiencia__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                <p> 2022 / 2023 Finalizado </p>
+                                <p>2022 / 2023 Finalizado</p>
                             </div>
-                            <h4>Auxiliar Qa Analyst </h4>
-                            <p>Lineru - Tangelo </p>
+                            <h4>Auxiliar Qa Analyst</h4>
+                            <p>Lineru - Tangelo</p>
                             <p>Colombia
                                 <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
                             </p>
@@ -89,20 +83,26 @@
                 </div>
             </div>
         </div>
-
-
-    </section>
-    <div class="habilidades">
-        <div class="title">
-            <div class="text-animate2">
-                <h2>Habilidades</h2>
+        <div class="habilidades">
+            <div class="title">
+                <div class="text-animate2">
+                    <h2>Habilidades</h2>
+                </div>
+                <div class="line"></div>
             </div>
-            <div class="line"></div>
+            <div class="container">
+                <div class="box_contain">
+                    <div class="wrapper" (mousemove)="onMouseMove($event)" (mouseleave)="onMouseLeave()">
+                        <div class="ticket 1">
+                            <h1>Angular</h1>
+                            <div class="bg"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-
-    </div>
+    </section>
     <div class="footer">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
 </div>
