--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -283,6 +283,62 @@
 
 
 
+.box_contain{
+
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    gap: 8px;
+}
+
+
+.ticket{
+    border: 2px solid #ff0000;
+    box-shadow: 0 0 40px 5px rgba(255, 0, 0, 0.3);
+    width: 300px;
+aspect-ratio: 18/9;    border-radius: 20px;
+    position: relative;
+    transition: transform .8s ease-in-out;
+    background: #ff0000;
+    display: flex;
+    justify-content: center;
+}
+
+
+.ticket:hover{
+  transition: none;
+}
+
+.container .wrapper.layout {
+ 
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8px;
+  grid-auto-flow: row dense;
+}
+.bg{
+  top: 0;
+background: rgba(0, 0, 0, .3);
+position: absolute;
+filter: blur(20px);
+width: 100%;
+height: 100%;
+}
+
+
+h1{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #fff;
+  padding: 20px;
+  font-size: 36px;
+  font-weight: 900;
+}
+
+.wrapper{
+    perspective: 1000px;
+    grid-auto-flow: row;
+}
 
 .footer {
     width: 100%;
